--- a/index2.html
+++ b/index2.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\windows10\OneDrive\Desktop\webbb\cssmysite\css1\style2.css">
-    <link rel="icon" href="C:\Users\windows10\OneDrive\Desktop\webbb\cssmysite\favicon.ico">
+    <link rel="stylesheet" href="style2.css">
+    <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
     <title>Gaurav Chaudhary</title>
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="C:\Users\windows10\OneDrive\Desktop\webbb\cssmysite\css1\images\cloud.png">
+        <img class="top-cloud" src="cloud.png">
         <h1>I'm Gaurav</h1>
         <h2> a student</h2>
-        <img class="bottom-cloud" src="C:\Users\windows10\OneDrive\Desktop\webbb\cssmysite\css1\images\cloud.png">
-        <img src="C:\Users\windows10\OneDrive\Desktop\webbb\cssmysite\css1\images\mountain.png"></div>
+        <img class="bottom-cloud" src="cloud.png">
+        <img src="mountain.png"></div>
        
         <div class="middle-container">
             <div class="profile">
-              <img src="C:\Users\windows10\OneDrive\Desktop\webbb\gaurav.png" alt="profile picture">
+              <img src="gaurav.png" alt="profile picture">
               <h2>Hello Ji.</h2>
               <p class="intro">I am Studying in NIT Warangal.Pursuing B-tech In Electrical and Electronics Engineering 
                 currently I am in second year .
@@ -29,12 +29,12 @@
             <div class="skills">
               <h2>My Skills.</h2>
               <div class="skill-row">
-                <img class="code" src="C:\Users\windows10\OneDrive\Desktop\webbb\cssmysite\css1\images\computer.png" alt="my skills">
+                <img class="code" src="computer.png" alt="my skills">
                 <h3>Web Designing </h3>
                 <p>I'm a front end web developer . I recently Designing a two web site for my cv </p>
               </div>
               <div class="skill-row">
-                <img class="chilli" src="C:\Users\windows10\OneDrive\Desktop\webbb\cssmysite\css1\images\graphic-design.png" alt="skill row">
+                <img class="chilli" src="graphic-design.png" alt="skill row">
                 <h3>Designing</h3>
                 <p>I Love To Do Designing .I Usually Do In Canva Portal . I Do Poster Designing For Many of The Club in NIT Warangal </p>
               </div>
